Fix button spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -133,7 +133,7 @@ a {
 }
 
 .btn-back {
-  margin-left: 2em;
+  margin-top: 2em;
 }
 
 /* Picture preview */
